--- a/art/paintings.html
+++ b/art/paintings.html
@@ -219,13 +219,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Boba Fett</strong><br>oil on canvas, 30x40, 2015</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="But You Could"
-        data-medium="oil on canvas" data-size="36x36" data-year="2012"
-        data-full="but-you-could-36x36.jpg">
-  <img src="but-you-could-36x36.jpg" alt="But You Could Thumbnail">
-  <figcaption><strong>But You Could</strong><br>oil on canvas, 36x36, 2012</figcaption>
-</figure>
-
 <figure class="painting" data-category="available" data-title="Catch Up With Or Surpass UK"
         data-medium="oil on canvas" data-size="40x30" data-year="2018"
         data-full="catch-up-with-or-surpass-uk-40x30.jpg">
@@ -387,13 +380,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Huntington Beach</strong><br>oil on canvas, 36x36, 2013</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Interior Point"
-        data-medium="oil on canvas" data-size="30x30" data-year="2012"
-        data-full="interior-point-30x30.jpg">
-  <img src="interior-point-30x30.jpg" alt="Interior Point Thumbnail">
-  <figcaption><strong>Interior Point</strong><br>oil on canvas, 30x30, 2012</figcaption>
-</figure>
-
 <figure class="painting" data-category="available" data-title="It's Just A V-Neck"
         data-medium="oil on canvas" data-size="30x15" data-year="2014"
         data-full="its-just-a-v-neck-30x15.jpg">
@@ -420,13 +406,6 @@ oil on canvas, 60x60, 2020
         data-full="modulus-36x36.jpg">
   <img src="modulus-36x36.jpg" alt="Modulo 31 Thumbnail">
   <figcaption><strong>Modulo 31</strong><br>oil on canvas, 36x36, 2022</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Landing Zone"
-        data-medium="oil on canvas" data-size="30x30" data-year="2019"
-        data-full="moon2-30x30.jpg">
-  <img src="moon2-30x30.jpg" alt="Landing Zone Thumbnail">
-  <figcaption><strong>Landing Zone</strong><br>oil on canvas, 30x30, 2019</figcaption>
 </figure>
 
 <!--
@@ -465,13 +444,6 @@ oil on canvas, 60x60, 2020
         data-full="no-man-30x30.jpg">
   <img src="no-man-30x30.jpg" alt="No Man Thumbnail">
   <figcaption><strong>No Man</strong><br>oil on canvas, 30x30, 2014</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Not Art But Still Expensive"
-        data-medium="oil on canvas" data-size="36x36" data-year="2015"
-        data-full="not-art-but-still-expensive-36x36.jpg">
-  <img src="not-art-but-still-expensive-36x36.jpg" alt="Not Art But Still Expensive Thumbnail">
-  <figcaption><strong>Not Art But Still Expensive</strong><br>oil on canvas, 36x36, 2015</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="Orange Jacket"
@@ -751,13 +723,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Mars</strong><br>oil on canvas, 30x30, 2022</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Desert Flight"
-        data-medium="oil on canvas" data-size="30x30" data-year="2012"
-        data-full="uav-30x30.jpg">
-  <img src="uav-30x30.jpg" alt="Desert Flight Thumbnail">
-  <figcaption><strong>Desert Flight</strong><br>oil on canvas, 30x30, 2012</figcaption>
-</figure>
-
 <figure class="painting" data-category="available" data-title="UFO over Venice, California"
         data-medium="oil on canvas" data-size="30x30" data-year="2025"
         data-full="ufo-30x30.jpg">
@@ -825,6 +790,43 @@ oil on canvas, 60x60, 2020
     <section id="sold">
       <h2>Sold</h2>
       <div class="gallery">
+
+<figure class="painting" data-category="sold" data-title="Landing Zone"
+        data-medium="oil on canvas" data-size="30x30" data-year="2019"
+        data-full="moon2-30x30.jpg">
+  <img src="moon2-30x30.jpg" alt="Landing Zone Thumbnail">
+  <figcaption><strong>Landing Zone</strong><br>oil on canvas, 30x30, 2019</figcaption>
+</figure>
+
+
+<figure class="painting" data-category="sold" data-title="Desert Flight"
+        data-medium="oil on canvas" data-size="30x30" data-year="2012"
+        data-full="uav-30x30.jpg">
+  <img src="uav-30x30.jpg" alt="Desert Flight Thumbnail">
+  <figcaption><strong>Desert Flight</strong><br>oil on canvas, 30x30, 2012</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="But You Could"
+        data-medium="oil on canvas" data-size="36x36" data-year="2012"
+        data-full="but-you-could-36x36.jpg">
+  <img src="but-you-could-36x36.jpg" alt="But You Could Thumbnail">
+  <figcaption><strong>But You Could</strong><br>oil on canvas, 36x36, 2012</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Interior Point"
+        data-medium="oil on canvas" data-size="30x30" data-year="2012"
+        data-full="interior-point-30x30.jpg">
+  <img src="interior-point-30x30.jpg" alt="Interior Point Thumbnail">
+  <figcaption><strong>Interior Point</strong><br>oil on canvas, 30x30, 2012</figcaption>
+</figure>
+
+
+<figure class="painting" data-category="sold" data-title="Not Art But Still Expensive"
+        data-medium="oil on canvas" data-size="36x36" data-year="2015"
+        data-full="not-art-but-still-expensive-36x36.jpg">
+  <img src="not-art-but-still-expensive-36x36.jpg" alt="Not Art But Still Expensive Thumbnail">
+  <figcaption><strong>Not Art But Still Expensive</strong><br>oil on canvas, 36x36, 2015</figcaption>
+</figure>
 
 
         <figure class="painting" data-category="sold" data-title="Kiss 4"
