--- a/art/paintings.html
+++ b/art/paintings.html
@@ -453,13 +453,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Orange Jacket</strong><br>oil on canvas, 30x30, 2022</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Phone 1"
-        data-medium="oil on canvas" data-size="30x30" data-year="2019"
-        data-full="phone1-30x30.jpg">
-  <img src="phone1-30x30.jpg" alt="Phone 1 Thumbnail">
-  <figcaption><strong>Phone 1</strong><br>oil on canvas, 30x30, 2019</figcaption>
-</figure>
-
 <!--
 <figure class="painting" data-category="available" data-title="Phone 2"
         data-medium="oil on canvas" data-size="40x30" data-year="2013"
@@ -488,13 +481,6 @@ oil on canvas, 60x60, 2020
         data-full="ramona-30x30.jpg">
   <img src="ramona-30x30.jpg" alt="Ramona Thumbnail">
   <figcaption><strong>Ramona</strong><br>oil on canvas, 30x30, 2012</figcaption>
-</figure>
-
-<figure class="painting" data-category="available" data-title="Raven"
-        data-medium="oil on canvas" data-size="36x36" data-year="2013"
-        data-full="raven-36x36.jpg">
-  <img src="raven-36x36.jpg" alt="Raven Thumbnail">
-  <figcaption><strong>Raven</strong><br>oil on canvas, 36x36, 2013</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="Red Mars"
@@ -841,6 +827,20 @@ oil on canvas, 60x60, 2020
         data-full="crawford2-30x30.jpg">
   <img src="crawford2-30x30.jpg" alt="Southern California Thumbnail">
   <figcaption><strong>Southern California</strong><br>oil on canvas, 30x30, 2021</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Phone 1"
+        data-medium="oil on canvas" data-size="30x30" data-year="2019"
+        data-full="phone1-30x30.jpg">
+  <img src="phone1-30x30.jpg" alt="Phone 1 Thumbnail">
+  <figcaption><strong>Phone 1</strong><br>oil on canvas, 30x30, 2019</figcaption>
+</figure>
+
+<figure class="painting" data-category="sold" data-title="Raven"
+        data-medium="oil on canvas" data-size="36x36" data-year="2013"
+        data-full="raven-36x36.jpg">
+  <img src="raven-36x36.jpg" alt="Raven Thumbnail">
+  <figcaption><strong>Raven</strong><br>oil on canvas, 36x36, 2013</figcaption>
 </figure>
 
 <figure class="painting" data-category="sold" data-title="Cat Searching"
