--- a/ciphers/movies.html
+++ b/ciphers/movies.html
@@ -17,7 +17,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Ciphers</h1>
+    <h1 class="page-title">Movies</h1>
   </header>
 
   <main> 
