--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 "left the oven on",
 "tap water's fine",
 "is why we can't have nice things",
+"tray tables up",
 "vote for me",
 "couldn't help but notice",
 "ineligible for beatification",
@@ -168,7 +169,7 @@
 "sits in the back",
 "will have the number one with onions",
 "has no hidden agenda",
-"wait, was today trash day?",
+"forgot it was trash day",
 "just lucky to be here",
 "writes in pencil, has potential",
 "your call is important to us",
