--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 "thinks you're cool",
 "has a favorite jacket",
 "let's don't and say we did",
+"it's the system, man",
 "can imagine quite a bit",
 "is off by one",
 "what could go wrong",
@@ -193,7 +194,8 @@
 "hasn't seen it but will check it out",
 "once entertained an entire notion",
 "is checking with forensics",
-"feels phantom phone vibrations",
+"is feeling phantom phone vibrations",
+"failed to obey a uniformed crewmember",
 "insane prices, somebody stop us",
 "made in california",
 "nth year",
