--- a/math/articles.html
+++ b/math/articles.html
@@ -23,7 +23,7 @@
   <main>
     <div class="article-list">
       <a href="https://hal.science/hal-04261183v1" class="article-card">
-        Collatz High Cycles Do Not Exist (2023), under review
+	      Collatz High Cycles Do Not Exist (2023), to appear in <i>Discrete Mathematics</i>
       </a>
       
       <a href="https://hal.science/hal-04080486v1" class="article-card">
