--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 "failed to obey a uniformed crewmember",
 "insane prices, somebody stop us",
 "where did all these ants come from?",
+"welcome to blurrrsday",
 "made in california",
 "nth year",
 "has really done it this time",
