--- a/likes/index.html
+++ b/likes/index.html
@@ -45,6 +45,11 @@
 <a href="https://en.wikipedia.org/wiki/In_the_First_Circle" class="nounderline">First Circle (Solzhenitsyn)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Boot" class="nounderline">All kindsa boots</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Cryptanalysis" class="nounderline">Historical cryptology</a><br><br>
+
+<a href="https://en.wikipedia.org/wiki/Homecoming_(TV_series)" class="nounderline">Homecoming s2</a><br><br>
+
+<a href="https://en.wikipedia.org/wiki/Fool_in_the_Rain" class="nounderline">Samba whistle</a><br><br>
+
 <a href="https://en.wikipedia.org/wiki/Eugene_Charniak" class="nounderline">Eugene Charniak</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Jake_Gyllenhaal" class="nounderline">Jake Gyllenhaal</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Surfing" class="nounderline">Surfing</a><br><br>
