--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 "wears band shirts",
 "once rode an elevator with a celebrity",
 "try me",
-"has that dream where he's late for the test",
+"had that dream where he's late for the test",
 "get yours today",
 "sees patterns where there literally aren't any",
 "needs a haircut",
