--- a/art/paintings.html
+++ b/art/paintings.html
@@ -121,6 +121,13 @@ oil on canvas, 60x60, 2020
       <h2>Available</h2>
       <div class="gallery">
 
+<figure class="painting" data-category="available" data-title="The Universe"
+        data-medium="oil on canvas" data-size="36x36" data-year="2025"
+        data-full="universe-36x36.jpg">
+  <img src="universe-36x36.jpg" alt="Universe Thumbnail">
+  <figcaption><strong>The Universe is a Million-Bit String</strong><br>oil on canvas, 36x36, 2025</figcaption>
+</figure>
+
 <figure class="painting" data-category="available" data-title="Mandalay"
         data-medium="oil on canvas" data-size="30x30" data-year="2025"
         data-full="mandalay-30x30.jpg">
