--- a/likes/index.html
+++ b/likes/index.html
@@ -63,8 +63,8 @@
 <a href="https://kevincrawfordknight.github.io/index-old.html" class="nounderline">Random unordered shit</a><br><br>
 <a href="https://kevincrawfordknight.github.io/pics-cooking.html" class="nounderline">Cooking</a><br><br>
 <a href="https://kevincrawfordknight.github.io/pics-ballona.html" class="nounderline">Ballona lagoon</a><br><br>
-
 <a href="https://en.wikipedia.org/wiki/The_Studio_(TV_series)" class="nounderline">The Studio</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Lone_Justice" class="nounderline">Lone Justice (band)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Beyond_Belief_(song)" class="nounderline">Beyond Belief by Elvis Costello</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Play_It_as_It_Lays" class="nounderline">Play it as it Lays</a><br><br>
 <a href="https://www.minibarbyjoseandres.com/" class="nounderline">Barmini</a><br><br>
