--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 "get yours today",
 "sees patterns where there literally aren't any",
 "needs a haircut",
+"strange days indeed",
+"i'm around",
 "should apply himself",
 "laughs at his own jokes",
 "wants to see you",
