--- a/likes/index.html
+++ b/likes/index.html
@@ -133,6 +133,10 @@
 <a href="https://en.wikipedia.org/wiki/The_Station_Agent" class="nounderline">The Station Agent</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Viggo_Brun" class="nounderline">Viggo Brun</a><br><br>
 <a href="https://en.wikipedia.org/wiki/No_Country_for_Old_Men_(film)" class="nounderline">No Country for Old Men</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Children_of_Men" class="nounderline">Children of Men</a><br><br>
+
+<a href="https://en.wikipedia.org/wiki/Claude_Shannon" class="nounderline">Claude Shannon</a><br><br>
+
 <a href="https://en.wikipedia.org/wiki/Superman:_Red_Son" class="nounderline">Superman: Red Son</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Kumiko,_the_Treasure_Hunter" class="nounderline">Kumiko the Treasure Hunter</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Classical_Chinese_poetry" class="nounderline">Chinese classical poetry</a><br><br>
