--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 "laughs at his own jokes",
 "wants to see you",
 "missed a belt loop",
+"deal me in",
 "impresses your mother",
 "no people call me the space cowboy",
 "back to the lecture at hand",
