--- a/math/articles.html
+++ b/math/articles.html
@@ -22,8 +22,9 @@
 
   <main>
     <div class="article-list">
-      <a href="https://hal.science/hal-04261183v1" class="article-card">
-	      Collatz High Cycles Do Not Exist (2023), to appear in <i>Discrete Mathematics</i>
+	    <!-- <a href="https://hal.science/hal-04261183v1" class="article-card"> -->
+      <a href="https://authors.elsevier.com/a/1lpxg,H-ceZMe" class="article-card">
+	      Collatz High Cycles Do Not Exist (2026), <i>Discrete Mathematics 349(3)</i>
       </a>
       
       <a href="https://hal.science/hal-04080486v1" class="article-card">
