--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 "brought snacks",
 "listens to reason",
 "is feeling feelings",
-"EYES GRN HAIR WHT PERS INTJ CAPR DRGN",
+"EYES GRN HAIR WHT INTJ CAPR DRGN",
 "can't find the parking brake", 
 "at tea time, everybody agrees",
 "wysiwyg",
