--- a/math/articles.html
+++ b/math/articles.html
@@ -25,11 +25,11 @@
 	    <!-- <a href="https://hal.science/hal-04261183v1" class="article-card"> -->
 
       <a href="https://authors.elsevier.com/a/1lpxg,H-ceZMe" class="article-card">
-	      Collatz High Cycles Do Not Exist (2026), <i>Discrete Mathematics</i> 349(3)
+	      Collatz High Cycles Do Not Exist (2026), <i>Discrete Mathematics</i> 349(3).
       </a>
       
       <a href="https://hal.science/hal-04080486v1" class="article-card">
-	      A Small Collatz Rule without the Plus One (2023), to appear in <i>Complex Systems</i>
+	      A Small Collatz Rule without the Plus One (2023), to appear in <i>Complex Systems.</i>
       </a>
 
       <a href="https://oeis.org/A383041" class="article-card">
@@ -37,7 +37,7 @@
       </a>
 
       <a href="https://aclanthology.org/2021.blackboxnlp-1.30.pdf" class="article-card">
-        Learning Mathematical Properties of Integers (2021)
+        Learning Mathematical Properties of Integers (2021), EMNLP BlackBox workshop.
       </a>
 
 
