--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 "sorry i missed your talk",
 "is okay mentally",
 "hopelessly devoted",
+"has called in air support",
 "can't take credit for that",
 "descended from apes",
 "was definitely invited",
