--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
 "sorry i missed your talk",
 "is okay mentally",
 "hopelessly devoted",
-"has called in air support",
 "can't take credit for that",
+"semi-autonomous",
+"where is everybody?",
+"unexpected item in the bagging area",
 "descended from apes",
 "was definitely invited",
 "has fifty bucks on the rams",
