--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 "at tea time, everybody agrees",
 "wysiwyg",
 "pick a card, but don't tell me what it is",
-"maximized expertise to income ratio",
+"maximal expertise-to-income ratio",
 "a leading producer of schadenfreude",
 "it's time to ramble on",
 "underachiever of the year",
