--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 "wysiwyg",
 "pick a card, but don't tell me what it is",
 "maximal expertise-to-income ratio",
+"proceed to decode",
 "a leading producer of schadenfreude",
 "it's time to ramble on",
 "underachiever of the year",
