--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
 "is okay mentally",
 "hopelessly devoted",
 "can't take credit for that",
-"semi-autonomous",
 "where is everybody?",
+"terms and conditions apply",
+"likes his whiskey sour",
 "unexpected item in the bagging area",
 "descended from apes",
 "was definitely invited",
@@ -212,6 +213,8 @@
 "who's a good boy?",
 "let's go",
 "missed a spot",
+"your witch is my corvette",
+"showing signs of excess autonomy",
 "is grilling some burgers",
 "so i'm free to go?",
 "you gonna eat that?",
