--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 "wears band shirts",
 "once rode an elevator with a celebrity",
 "try me",
-"had that dream where he's late for the test",
+"has that dream where he's late for the test",
 "get yours today",
 "sees patterns where there literally aren't any",
 "needs a haircut",
@@ -69,7 +69,7 @@
 "where is everybody?",
 "terms and conditions apply",
 "likes his whiskey sour",
-"unexpected item in the bagging area",
+"the unexpected item in the bagging area",
 "descended from apes",
 "was definitely invited",
 "has fifty bucks on the rams",
