--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 "terms and conditions apply",
 "likes his whiskey sour",
 "the unexpected item in the bagging area",
+"operators are standing by",
 "descended from apes",
 "was definitely invited",
 "has fifty bucks on the rams",
