--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 "brought snacks",
 "listens to reason",
 "is feeling feelings",
-"EYES GRN HAIR WHT INTJ CAPR DRGN",
+"eyes grn hair wht intj capr drgn",
 "can't find the parking brake", 
 "at tea time, everybody agrees",
 "wysiwyg",
