--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
 "listens to reason",
 "is feeling feelings",
 "eyes grn hair wht intj capr drgn",
+"keep calm and follow the gradient",
+"come join the heist",
+"make me",
+"the spice must flow",
 "can't find the parking brake", 
 "at tea time, everybody agrees",
 "wysiwyg",
