--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 "let's get small",
 "dreaming is free",
 "nothing a little correction fluid won't fix",
-"number of page views unknown",
+"page views unknown",
 "nice boots",
 "shady's back",
 "stole your lighter",
