--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 "back to the lecture at hand",
 "sorry i missed your talk",
 "is okay mentally",
+"involuntary eyeroll",
+"voight-kampff test? aced it",
 "hopelessly devoted",
 "can't take credit for that",
 "where is everybody?",
