--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
 "are we still on the payroll?",
 "anybody seen the cat?",
 "is on the verge",
+"knows one weird trick",
+"doesn't recall any memory loss",
+"side sleeper",
 "stands corrected",
 "better than expected",
 "wait, what?",
