--- a/art/paintings.html
+++ b/art/paintings.html
@@ -128,6 +128,13 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>The Universe is a Million-Bit String</strong><br>oil on canvas, 36x36, 2025</figcaption>
 </figure>
 
+<figure class="painting" data-category="available" data-title="Fujiyama"
+        data-medium="oil on canvas" data-size="30x30" data-year="2025"
+        data-full="fujiyama-30x30.jpg">
+  <img src="fujiyama-30x30.jpg" alt="Fujiyama Thumbnail">
+  <figcaption><strong>Fujiyama</strong><br>oil on canvas, 30x30, 2025</figcaption>
+</figure>
+
 <figure class="painting" data-category="available" data-title="Mandalay"
         data-medium="oil on canvas" data-size="30x30" data-year="2025"
         data-full="mandalay-30x30.jpg">
