--- a/index-old.html
+++ b/index-old.html
@@ -91,6 +91,9 @@ Leaked Russian <a href="pictures/lrwp2.mp4">war plans</a> ... what could go wron
 <p>
 <A HREF="inexplicably.html">An amicable story</A>.
 </p>
+
+<p>
+<A HREF="encyclopedia.html">At the publisher, a factual telling</A>.
  
 <p>
 Cryptography consultant, <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake">Under the Silver Lake</a> (2019).
