--- a/index.html
+++ b/index.html
@@ -109,6 +109,13 @@
 "rat compatible", 
 "thinks you're cool",
 "is it just me?",
+"views expressed may not be my own",
+"not liable for errors or omissions",
+"for entertainment purposes only",
+"do not stare directly at documents",
+"for external use only",
+"i don't practice santeria",
+"all good here",
 "has a favorite jacket",
 "let's don't and say we did",
 "it's the system, man",
