--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
 "for external use only",
 "i don't practice santeria",
 "all good here",
+"sure knows how to arrange things",
+"contemporary artist",
+"a credible site",
+"i'll do it for a hundred fifty",
+"will bring jambalaya",
+"washes his hands before returning to work",
+"karma farmer",
+"40% less sodium than other sites",
+"queenside pawn fusillade",
 "has a favorite jacket",
 "let's don't and say we did",
 "it's the system, man",
