--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 "try me",
 "has that dream where he's late for the test",
 "get yours today",
-"sees patterns where there literally aren't any",
+"sees patterns where there aren't any",
 "needs a haircut",
 "strange days indeed",
 "i'm around",
