--- a/art/paintings.html
+++ b/art/paintings.html
@@ -121,6 +121,13 @@ oil on canvas, 60x60, 2020
       <h2>Available</h2>
       <div class="gallery">
 
+<figure class="painting" data-category="available" data-title="Lunar"
+        data-medium="oil on canvas" data-size="30x30" data-year="2025"
+        data-full="lunar-30x30.jpg">
+  <img src="lunar-30x30.jpg" alt="Lunar Thumbnail">
+  <figcaption><strong>Lunar</strong><br>oil on canvas, 30x30, 2025</figcaption>
+</figure>
+
 <figure class="painting" data-category="available" data-title="The Universe"
         data-medium="oil on canvas" data-size="36x36" data-year="2025"
         data-full="universe-36x36.jpg">
