--- a/math/articles.html
+++ b/math/articles.html
@@ -24,7 +24,7 @@
     <div class="article-list">
 	    <!-- <a href="https://hal.science/hal-04261183v1" class="article-card"> -->
 
-      <a href="https://authors.elsevier.com/a/1lpxg,H-ceZMe" class="article-card">
+      <a href="https://www.sciencedirect.com/science/article/abs/pii/S0012365X25004200" class="article-card">
 	      Collatz High Cycles Do Not Exist (2026), <i>Discrete Mathematics</i> 349(3).
       </a>
       
