--- a/index-old.html
+++ b/index-old.html
@@ -51,7 +51,7 @@ I recently wrote a <a href="https://a.co/d/1TlDwVs">number theory book</a>
 and an <a href="https://www.amazon.com/dp/B0B92HRJWG">art book</a>.
 
   <p>
-I have math channel called <a href="https://www.youtube.com/@mathkook">Math Kook</a>! 
+I have a math channel called <a href="https://www.youtube.com/@mathkook">Math Kook</a>! 
 What's the infamous <a href="https://www.youtube.com/playlist?list=PL4lTtiG6es54CW3vr5yKm99TcTLAaE0kE">Collatz conjecture</a>?
 How many <a href="https://youtu.be/Jaa4xTUDfek?feature=shared&t=86">prime numbers</a> are there?
 
