--- a/art/paintings.html
+++ b/art/paintings.html
@@ -201,12 +201,21 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Woman with Bike</strong><br>oil on canvas, 30x30, 2014</figcaption>
 </figure>
 
+<figure class="painting" data-category="available" data-title="Good Morning"
+        data-medium="oil on canvas" data-size="30x30" data-year="2025"
+        data-full="good-morning-30x30.jpg">
+  <img src="good-morning-30x30.jpg" alt="Good Morning Thumbnail">
+  <figcaption><strong>Good Morning</strong><br>oil on canvas, 30x30, 2025</figcaption>
+</figure>
+
+<!--
 <figure class="painting" data-category="available" data-title="Dylanesque"
         data-medium="oil on canvas" data-size="30x30" data-year="2025"
         data-full="dylanesque-30x30.jpg">
   <img src="dylanesque-30x30.jpg" alt="Dylanesque Thumbnail">
   <figcaption><strong>Dylanesque</strong><br>oil on canvas, 30x30, 2025</figcaption>
 </figure>
+-->
 
 <figure class="painting" data-category="available" data-title="Do Good Research"
         data-medium="oil on canvas" data-size="36x24" data-year="2013"
