--- a/art/paintings.html
+++ b/art/paintings.html
@@ -203,8 +203,8 @@ oil on canvas, 60x60, 2020
 
 <figure class="painting" data-category="available" data-title="Good Morning"
         data-medium="oil on canvas" data-size="30x30" data-year="2025"
-        data-full="good-morning-30x30.jpg">
-  <img src="good-morning-30x30.jpg" alt="Good Morning Thumbnail">
+        data-full="good-morning-30x30.jpeg">
+  <img src="good-morning-30x30.jpeg" alt="Good Morning Thumbnail">
   <figcaption><strong>Good Morning</strong><br>oil on canvas, 30x30, 2025</figcaption>
 </figure>
 
