--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 "should apply himself",
 "laughs at his own jokes",
 "wants to see you",
+"good name for a rock band",
+"bad aptitude",
 "missed a belt loop",
 "deal me in",
 "impresses your mother",
@@ -185,8 +187,11 @@
 "it's time to ramble on",
 "underachiever of the year",
 "find my house in grand theft auto",
-"maybe let's get one and split it",
+"how about we get one and split it",
+"no job too big or too small",
 "don't tase me, bro",
+"we all frens here",
+"never wastes a hot afternoon",
 "here's a concept that works",
 "hi! my name is",
 "make yourself at home",
