--- a/likes/index.html
+++ b/likes/index.html
@@ -157,6 +157,7 @@
 <a href="https://en.wikipedia.org/wiki/The_Best_of_Frederik_Pohl" class="nounderline">Speed Trap (F. Pohl)</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Dune_(novel)" class="nounderline">Dune</a><br><br>
 <a href="https://en.wikipedia.org/wiki/On_the_Turning_Away" class="nounderline">On the Turning Away by Pink Floyd</a><br><br>
+<a href="https://www.youtube.com/watch?v=4XJBNJ2wq0Y&list=RD4XJBNJ2wq0Y&start_radio=1" class="nounderline">Abba Waterloo</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Sharpie_(marker)" class="nounderline">Black Sharpies</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Born_Pink_(album)" class="nounderline">Tally by Blackpink</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Prime_number" class="nounderline">Prime numbers</a><br><br>
