--- a/ai/index.html
+++ b/ai/index.html
@@ -28,7 +28,7 @@
   <!-- Main content -->
   <main>
 <p style="margin-bottom:1.0em;">
-Dr. Knight is Chief Scientist at Threeven Labs. He previously served on the faculty of the University of Southern California (26 years), as Co-Founder and Chief Scientist at Language Weaver, Inc. (9 years), and as Chief Scientist for Natural Language Processing at Didi Global (4 years). 
+Dr. Knight is Chief Executive Officer at <a><href="https://threeven-labs.github.io">Threeven Labs</a). He previously served on the faculty of the University of Southern California (26 years), as Co-Founder and Chief Scientist at Language Weaver, Inc. (9 years), and as Chief Scientist for Natural Language Processing at Didi Global (4 years). 
 </p>
 <p style="margin-bottom:1.0em;">
 He received a PhD in computer science from Carnegie Mellon University and a bachelor's degree from Harvard University. Dr. Knight's research interests include machine translation, natural language generation, automata theory, decipherment of historical documents, and number theory. 
