--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
 "don't tase me, bro",
 "we all frens here",
 "never wastes a hot afternoon",
+"i probably think this song is about me",
+"reply hazy, try again",
 "here's a concept that works",
 "hi! my name is",
 "make yourself at home",
