--- a/index.html
+++ b/index.html
@@ -217,6 +217,12 @@
 "just lucky to be here",
 "writes in pencil, has potential",
 "your call is important to us",
+"stockholm imposter syndrome",
+"who else knows about this?",
+"i like to work hard but i also like to work hard",
+"living rent-free in my own head",
+"mature content, smoking, suggestive dialog",
+"recommended by 4 out of 5 committee members",
 "has visited several US states",
 "a hotbed of nonmonetizable activity",
 "press two for english",
