--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 "splits his time between indoors and outdoors",
 "is literally inside of a building right now",
 "wears band shirts",
-"once rode an elevator with a celebrity",
+"once rode in an elevator with a celebrity",
 "try me",
 "has that dream where he's late for the test",
 "get yours today",
@@ -84,7 +84,7 @@
 "are we still on the payroll?",
 "anybody seen the cat?",
 "is on the verge",
-"knows one weird trick",
+"knows this one weird trick",
 "side sleeper",
 "stands corrected",
 "better than expected",
@@ -92,17 +92,15 @@
 "has been pre-approved",
 "ubik is everywhere",
 "burn rate nominal",
-"gets pulled over",
 "has half a brain",
 "no time to explain",
 "is thinking of a number",
-"let's do shots", "veni, vidi",
+"let's do shots", 
+"veni, vidi",
 "voted for the other one",
 "can't quite seem to reach it",
 "gets stuck now and then",
 "hates to judge",
-"werkin onna commuter",
-"gets the news on sunday",
 "minimal drama",
 "needs a new backpack",
 "serves the people",
@@ -114,19 +112,17 @@
 "views expressed may not be my own",
 "not liable for errors or omissions",
 "for entertainment purposes only",
-"do not stare directly at documents",
+"do not stare directly at the documents",
 "for external use only",
 "i don't practice santeria",
 "all good here",
 "sure knows how to arrange things",
-"contemporary artist",
 "a credible site",
 "i'll do it for a hundred fifty",
 "will bring jambalaya",
 "washes his hands before returning to work",
 "karma farmer",
-"40% less sodium than other sites",
-"queenside pawn fusillade",
+"40% less sodium than other websites",
 "has a favorite jacket",
 "let's don't and say we did",
 "it's the system, man",
@@ -153,12 +149,10 @@
 "it's for a project",
 "ain't no sellout",
 "left the oven on",
-"tap water's fine",
 "is why we can't have nice things",
 "tray tables up",
 "vote for me",
 "couldn't help but notice",
-"ineligible for beatification",
 "not that kind of medical professional",
 "will take questions now",
 "knows a guy who knows a guy",
@@ -166,7 +160,6 @@
 "have a good weekend, see you tomorrow",
 "has a nemesis",
 "stuck in the middle with you",
-"people think i'm joking",
 "upside down face emoji",
 "already tried turning it off and back on",
 "brought snacks",
@@ -186,8 +179,7 @@
 "a leading producer of schadenfreude",
 "it's time to ramble on",
 "underachiever of the year",
-"find my house in grand theft auto",
-"how about we get one and split it",
+"want to just get one and split it?",
 "no job too big or too small",
 "don't tase me, bro",
 "we all frens here",
@@ -222,7 +214,7 @@
 "i like to work hard but i also like to work hard",
 "living rent-free in my own head",
 "mature content, smoking, suggestive dialog",
-"recommended by 4 out of 5 committee members",
+"recommended by 4 out of 5 phd committee members",
 "has visited several US states",
 "a hotbed of nonmonetizable activity",
 "press two for english",
@@ -241,7 +233,6 @@
 "memorized the stupid rules",
 "werks hard",
 "never won anything before",
-"hasn't seen it but will check it out",
 "once entertained an entire notion",
 "is checking with forensics",
 "is feeling phantom phone vibrations",
