--- a/index-old.html
+++ b/index-old.html
@@ -15,6 +15,11 @@
 <!-- <IMG WIDTH=100 ALIGN=RIGHT SRC="pictures/KevinKnight.jpg"> -->
 
 <p align="right">
+<i><small><small>He hears the ticking of the clocks</small></small></i> <br>
+<i><small><small>And walks along with a parrot that talks</small></small></i> <br> 
+<i><small><small>- B. Dylan</small></small></i> <br> <br>
+
+<p align="right">
 <i><small><small>Arrest this man, he talks in maths.</small></small></i> <br>
 <i><small><small>- Radiohead</small></small></i> <br> <br>
 
@@ -22,7 +27,7 @@
 <i><small><small>And your father to your sister he explains</small></small></i> <br>
 <i><small><small>That you're tired of yourself and all of your creations</small></small></i> <br>
 <i><small><small>Won't you come see me, Queen Jane?</small></small></i> <br>
-<i><small><small>- Bob Dylan</small></small></i>
+<i><small><small>- B. Dylan</small></small></i>
 </p>
 
 <P>
