--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
 "is grilling some burgers",
 "so i'm free to go?",
 "you gonna eat that?",
+"ok if i reboot the wireless?",
 "act now, while supplies last",
 "surf's up",
 "is easily amused"];
