--- a/index.html
+++ b/index.html
@@ -161,11 +161,13 @@
 "has a nemesis",
 "stuck in the middle with you",
 "upside down face emoji",
-"already tried turning it off and back on",
+"try turning it off and back on again",
 "brought snacks",
 "listens to reason",
 "is feeling feelings",
-"eyes grn hair wht intj capr drgn",
+"eyes grn, hair wht, intj, capr, drgn",
+"accepts hush money",
+"drinks coffee and paints",
 "keep calm and follow the gradient",
 "come join the heist",
 "make me",
@@ -173,7 +175,7 @@
 "can't find the parking brake", 
 "at tea time, everybody agrees",
 "wysiwyg",
-"pick a card, but don't tell me what it is",
+"pick a card, just don't tell me what it is",
 "maximal expertise-to-income ratio",
 "proceed to decode",
 "a leading producer of schadenfreude",
