--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
 "listens to reason",
 "is feeling feelings",
 "eyes grn, hair wht, intj, capr, drgn",
-"accepts hush money",
+"graciously accepts hush money",
 "drinks coffee and paints",
+"i'm a clean-cut kid and i been to college too",
 "keep calm and follow the gradient",
 "come join the heist",
 "make me",
