--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
 "is feeling feelings",
 "eyes grn, hair wht, intj, capr, drgn",
 "graciously accepts hush money",
+"who's here in 2026?",
+"i've been called worse",
+"a maze of twisty passages, all alike",
+"sorta like a waring blender",
+"limited to one existential threat at a time",
 "drinks coffee and paints",
 "i'm a clean-cut kid and i been to college too",
 "keep calm and follow the gradient",
