--- a/index-old.html
+++ b/index-old.html
@@ -1423,8 +1423,10 @@ McGraw-Hill Book Company, 1991.
 </P>
 <P>
 "Automated Rationalization" (K. Knight and Y. Gil), Proceedings of the Workshop on Multistrategy Learning (Harpers Ferry, WV), 1991.
+<A HREF="papers/automated-rationalization2.pdf">Get paper in PDF</A>.
 </P>
  
+<!--
 <p>
 Note: I can't find the above paper.  However, <a href="https://archipel.uqam.ca/144/2/Kodra.htm">here</a> is a contemporaneous take: 
 "Yet another interesting information relative to explanations in the symbolic/neural debate is that some people at CMU built such a mixed system. 
@@ -1434,6 +1436,7 @@ The symbolic system was thus a sophist able to explain a result, but also its co
 This interesting experiment was acknowledged with much hostility by the AI community because of its sophistry. 
 It illustrates well however one way for the neural and the symbolic to share their work."
 Love it!
+-->
  
 <P>
 "Connectionist Ideas and Algorithms", Communications of the ACM, 
