--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
 "i've been called worse",
 "a maze of twisty passages, all alike",
 "sorta like a waring blender",
-"limited to one existential threat at a time",
+"one existential threat at a time, please",
+"employee of the month",
+"we need to talk",
 "drinks coffee and paints",
 "i'm a clean-cut kid and i been to college too",
 "keep calm and follow the gradient",
