--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 "splits his time between indoors and outdoors",
 "is literally inside of a building right now",
 "wears band shirts",
-"once rode in an elevator with a celebrity",
+"once rode an elevator with a celebrity",
 "try me",
 "has that dream where he's late for the test",
 "get yours today",
@@ -57,7 +57,6 @@
 "should apply himself",
 "laughs at his own jokes",
 "wants to see you",
-"good name for a rock band",
 "bad aptitude",
 "missed a belt loop",
 "deal me in",
@@ -177,7 +176,7 @@
 "drinks coffee and paints",
 "i'm a clean-cut kid and i been to college too",
 "keep calm and follow the gradient",
-"come join the heist",
+"join the heist",
 "make me",
 "the spice must flow",
 "can't find the parking brake", 
