--- a/index.html
+++ b/index.html
@@ -133,11 +133,9 @@
 "just touched down in LA",
 "prefers the aisle",
 "nice place you have here, mr. pike",
-"here's the thing",
 "here comes your man",
 "has no problem with that",
 "has a double tooth",
-"gimme something to write on",
 "is laser-focused on delight",
 "this looks like a job for me",
 "forgot to pack underwear",
@@ -182,7 +180,7 @@
 "can't find the parking brake", 
 "at tea time, everybody agrees",
 "wysiwyg",
-"pick a card, just don't tell me what it is",
+"pick a card but don't tell me what it is",
 "maximal expertise-to-income ratio",
 "proceed to decode",
 "a leading producer of schadenfreude",
@@ -218,7 +216,7 @@
 "just lucky to be here",
 "writes in pencil, has potential",
 "your call is important to us",
-"stockholm imposter syndrome",
+"has stockholm imposter syndrome",
 "who else knows about this?",
 "i like to work hard but i also like to work hard",
 "living rent-free in my own head",
@@ -240,7 +238,6 @@
 "shady's back",
 "stole your lighter",
 "memorized the stupid rules",
-"werks hard",
 "never won anything before",
 "once entertained an entire notion",
 "is checking with forensics",
