--- a/index-old.html
+++ b/index-old.html
@@ -294,13 +294,11 @@ I think Gary Shteyngart is funny.
 <H2><font size=+6>S</font>elected Publications</H2> 
 (Well, OK, I went ahead and selected them all)
 
-<p><b>2023</b></p>
+<p>
+"Collatz High Cycles Do Not Exist", Discrete Mathematics 349(3), 2026. <A HREF="https://www.sciencedirect.com/science/article/abs/pii/S0012365X25004200">Get paper</A>.
 
 <p>
-"Collatz High Cycles Do Not Exist" (K. Knight), <A HREF="https://hal.science/hal-04261183v1/document">Get preprint in PDF</A>.
-
-<p>
-"A Small Collatz Rule without the Plus One" (K. Knight), <A HREF="https://hal.science/hal-04080486v1/document">Get preprint in PDF</A>.
+"A Small Collatz Rule without the Plus One", <A HREF="https://hal.science/hal-04080486v1/document">Get preprint in PDF</A>.
 
  <hr>
  
