--- a/index-old.html
+++ b/index-old.html
@@ -305,7 +305,7 @@ I think Gary Shteyngart is funny.
  <p>
 <img src="pictures/cassette-hits.jpg" width="200">
  
-<p><b>Vol. 1</b></p>
+<p><b>NLP Vol. 1</b></p>
  
 <P>
 "Connectionist Ideas and Algorithms" Communications of the ACM, 33(11), November, 1990.
@@ -349,7 +349,7 @@ Proc. of the Conference of the Association for Computational Linguistics (ACL), 
 (M. Galley, M. Hopkins, K. Knight, D. Marcu), Proc. NAACL-HLT, 2004.
 <A HREF="http://www.aclweb.org/anthology/N/N04/N04-1035.pdf">Get paper in PDF</A>. 
  
-<p><b>Vol. 2</b></p>
+<p><b>NLP Vol. 2</b></p>
 
 <p>
 "The Copiale Cipher"
