--- a/index-old.html
+++ b/index-old.html
@@ -298,7 +298,7 @@ I think Gary Shteyngart is funny.
 "Collatz High Cycles Do Not Exist", Discrete Mathematics 349(3), 2026. <A HREF="https://www.sciencedirect.com/science/article/abs/pii/S0012365X25004200">Get paper</A>.
 
 <p>
-"A Small Collatz Rule without the Plus One", <A HREF="https://hal.science/hal-04080486v1/document">Get preprint in PDF</A>.
+"A Small Collatz Rule without the Plus One", Complex Systems (to appear), 2026. <A HREF="https://hal.science/hal-04080486v1/document">Get preprint in PDF</A>.
 
  <hr>
  
