--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
 "at tea time, everybody agrees",
 "wysiwyg",
 "pick a card but don't tell me what it is",
+"the neutrality of this site is disputed",
+"excessive amounts of intricate detail",
+"the pleasure's all mine",
 "maximal expertise-to-income ratio",
 "proceed to decode",
 "a leading producer of schadenfreude",
