--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   const statuses = [
 "is not a nark",
 "does whatever he wants",
+"[indistinct radio chatter]",
 "talks in maths",
 "never finishes",
 "splits his time between indoors and outdoors",
@@ -184,6 +185,15 @@
 "the neutrality of this site is disputed",
 "excessive amounts of intricate detail",
 "the pleasure's all mine",
+"i'm not like them other girls at all",
+"wonders how it ever got this crazy",
+"the limit does not exist",
+"no papers want to know whose shirts i wear",
+"ate the whole block of cheese",
+"reply stop to unsubscribe",
+"how's my driving?",
+"wouldn't want to say one way or another",
+"not my circus, not my monkeys",
 "maximal expertise-to-income ratio",
 "proceed to decode",
 "a leading producer of schadenfreude",
