--- a/art/paintings.html
+++ b/art/paintings.html
@@ -118,7 +118,7 @@ oil on canvas, 60x60, 2020
 
     <!-- =========  AVAILABLE  ========= -->
     <section id="available">
-      <h2>Available</h2>
+      <h2>Available (update 1/18/26: STUDIO IS MOVING, NAME A PRICE)</h2>
       <div class="gallery">
 
 <figure class="painting" data-category="available" data-title="Lunar"
