--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@
 "excessive amounts of intricate detail",
 "the pleasure's all mine",
 "wonders how it ever got this crazy",
+"confounds probability and utility",
+"the bourgeois pursuit of gainful employment",
+"past results are not indicative",
 "the limit does not exist",
 "no papers want to know whose shirts i wear",
 "ate the whole block of cheese",
