--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
 "the limit does not exist",
 "no papers want to know whose shirts i wear",
 "ate the whole block of cheese",
+"typical american",
+"you got the wrong guy",
+"depends, do i have to leave the house?",
+"remember that one time in band camp",
 "reply stop to unsubscribe",
 "how's my driving?",
 "wouldn't want to say one way or another",
